Improve DMA OAM timings. Still not perfect